# haskell

hash-file-namer/: hash-file-namer.cabal
hash-file-namer/src/: Main.hs  Test.hs
